--- a/pom.xml
+++ b/pom.xml
@@ -21,17 +21,19 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-bom -->
             <dependency>
                 <groupId>io.cucumber</groupId>
                 <artifactId>cucumber-bom</artifactId>
-                <version>${cucumber.version}</version>
+                <version>7.22.1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/org.junit/junit-bom -->
             <dependency>
                 <groupId>org.junit</groupId>
                 <artifactId>junit-bom</artifactId>
-                <version>5.11.4</version>
+                <version>5.13.0-M2</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
